--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,26 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- Leaflet CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css"
+    />
+    <!-- Leaflet.BeautifyIcon CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/leaflet-beautify-marker-icon@1.0.9/dist/leaflet-beautify-marker-icon.min.css"
+    />
+    <!-- Google Identity Services Script -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Leaflet JS -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"
+    ></script>
+    <!-- Leaflet.BeautifyIcon JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/leaflet-beautify-marker-icon@1.0.9/dist/leaflet-beautify-marker-icon.min.js"
+    ></script>
   </head>
   <body>
     <app-root></app-root>
