--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Hookspot</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
-    <link rel="icon" type="image/png" href="assets/hookspot-favicon.png" />
+    <link rel="icon" type="image/png" href="assets/logo-images/hookspot-favicon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap"
       rel="stylesheet"
